--- a/angular9/src/app/signup/signup.component.html
+++ b/angular9/src/app/signup/signup.component.html
@@ -5,13 +5,13 @@
     <label for="email">Email</label>
     <input type="email" name="email" autocomplete="off" formControlName="email" placeholder="email@example.com" required>
 
-    <span *ngIf="isValid('email')">Entered email is invalid</span>
+    <!-- <span *ngIf="isValid('email')">Entered email is invalid</span> -->
   </div>
   <div class="row">
     <label for="username">username</label>
     <input type="text" name="username" autocomplete="off" formControlName="username" placeholder="uname" required>
 
-    <span *ngIf="isValid('username')">Username is required</span>
+    <!-- <span *ngIf="isValid('username')">Username is required</span> -->
   </div>
   <div class="row">
     <label for="password">Password</label>
