--- a/angular9/src/app/login/login.component.html
+++ b/angular9/src/app/login/login.component.html
@@ -5,11 +5,11 @@
 
       <!-- <form (ngSubmit)="loginuser()" class="flex-column-centered">
       <form (ngSubmit)="loginuser()" class="flex-column-centered"> -->
-      <form class="flex-column-centered" [formGroup]="loginForm">
+      <!-- <form class="flex-column-centered" [formGroup]="loginForm"> -->
         <input type="text" class="inputuserandpassword" formControlName="email" id="user" placeholder="Username"  required> <br>
         <input type="password" name="password" class="inputuserandpassword"  id="password" placeholder="Password" formControlName="password" required> <br>
         <input (click)="login()" type="submit" value="Login" class="loginbutton"> <br>
-      </form>
+      <!-- </form> -->
      
         <div>
           <div style="width: 290px; padding: 20px;">
