--- a/angular9/src/app/authors/authors.component.html
+++ b/angular9/src/app/authors/authors.component.html
@@ -50,9 +50,9 @@
         <div class="col-xs-3"></div>
       </div>
       <br><br>
-      <button class="btn btn-info"  (click)="editauthor(authors)">edit</button>
+      <button class="btn btn-info"  (click)="editauthor(i)">edit</button>
       <!-- <button class="btn btn-info" *ngIf="auth.loggedIn()" (click)="editauthor(authors)">edit</button> -->
-      <button class="btn btn-danger" (click)="deleteauthor(authors)">delete</button>
+      <button class="btn btn-danger" (click)="deleteauthor(i)">delete</button>
       <!-- <button class="btn btn-danger" *ngIf="auth.loggedIn()" (click)="deleteauthor(authors)">delete</button> -->
     </div>
   </div>
