--- a/angular9/src/app/books/books.component.html
+++ b/angular9/src/app/books/books.component.html
@@ -16,13 +16,13 @@
 
 
 
-  <!-- <div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col-md-2 col-sm-3 text-center">
             <a class="story-title" href="#"><img alt="" src="/assets/images/{{i.images}}" style="width:100px;height:100px" class="img-circle"></a>
             <div class="col-md-10 col-sm-9"> -->
-                <!-- <h3>{{books.title}}</h3> -->
-                <!-- <div class="row">
+<!-- <h3>{{books.title}}</h3> -->
+<!-- <div class="row">
                     <div class="col-xs-9">
                       <h4><span class="label label-default">{{i.author}}</span>
                     </h4>
@@ -38,14 +38,14 @@
         </div>
     </div>
   </div> -->
-  
 
 
 
 
 
 
-  <!-- video -->
+
+<!-- video -->
 <!-- 
    <nav class="navbar navbar-light bg-success">
        <div class="container-fluid">
@@ -56,56 +56,56 @@
            </div>
        </div>
    </nav> -->
-    <!-- ends video nav -->
-   
-   
-   <!-- <div class="p-5 mb-4 bg-light rounded-3">
+<!-- ends video nav -->
+
+
+<!-- <div class="p-5 mb-4 bg-light rounded-3">
        <div class="container-fluid py-5">
            <h1 class="display-5 fw-bold"> books </h1>
        </div>
    </div> -->
-   
-   
-   
-   
-   
-   
-   <div class="container-fluid"> 
-    <div *ngFor='let i of books' class="row">
-        <div class="col-md-2 col-sm-3 text-center mt-5">
-            <img [src]="i.imageUrl" class="img-fluid" alt="..." width="180px">
-             <h3>title{{i.title}}</h3>
-            <div class="row">
-                <div class="col-xs-9">
-                    <h4><span class="label label-default">booksId{{i.booksId}}</span>
-                    </h4>
-                </div>
-            <div class="row">
-                <div class="col-xs-9">
-                    <h4><span class="label label-default">author{{i.author}}</span>
-                    </h4>
-                </div>
-                <div class="col-xs-9">
-                    <h4><span class="label label-default">genre{{i.genre}}</span>
-                    </h4>
-                </div>
-                <!-- <div class="col-xs-9">
+
+
+
+
+
+
+<div class="container-fluid">
+  <div *ngFor='let i of books' class="row">
+    <div class="col-md-2 col-sm-3 text-center mt-5">
+      <img [src]="i.imageUrl" class="img-fluid" alt="..." width="180px">
+      <h3>title{{i.title}}</h3>
+      <div class="row">
+        <div class="col-xs-9">
+          <h4><span class="label label-default">booksId{{i.booksId}}</span>
+          </h4>
+        </div>
+        <div class="row">
+          <div class="col-xs-9">
+            <h4><span class="label label-default">author{{i.author}}</span>
+            </h4>
+          </div>
+          <div class="col-xs-9">
+            <h4><span class="label label-default">genre{{i.genre}}</span>
+            </h4>
+          </div>
+          <!-- <div class="col-xs-9">
                     <h4><span class="label label-default">description{{i.author}}</span>
                     </h4>
                 </div> -->
-                <div class="col-xs-9">
-                    <h4><span class="label label-default">{{i.imageUrl}}</span>
-                    </h4>
-                </div>
-                <button class="btn btn-info"  (click)="updatebooks(books)">edit</button>
-                <!-- <button class="btn btn-info" *ngIf="auth.loggedIn()" (click)="updatebooks(books)">edit</button> -->
-                <button class="btn btn-danger" (click)="deletebooks(books)">delete</button>
-                <!-- <button class="btn btn-danger" *ngIf="auth.loggedIn()" (click)="deletebooks(books)">delete</button> -->
-            </div>
+          <div class="col-xs-9">
+            <h4><span class="label label-default">{{i.imageUrl}}</span>
+            </h4>
+          </div>
+          <button class="btn btn-info" (click)="updatebooks(i)">edit</button>
+          <!-- <button class="btn btn-info" *ngIf="auth.loggedIn()" (click)="updatebooks(books)">edit</button> -->
+          <button class="btn btn-danger" (click)="deletebooks(i)">delete</button>
+          <!-- <button class="btn btn-danger" *ngIf="auth.loggedIn()" (click)="deletebooks(books)">delete</button> -->
         </div>
-        
+      </div>
+
     </div>
-  </div> 
+  </div>
 
 
 
@@ -114,28 +114,32 @@
 
 
 
-  <div class="row" *ngFor='let i of books'>    
+  <div class="row" *ngFor='let i of books'>
     <br>
     <div class="col-md-2 col-sm-3 text-center">
-      <a class="story-title" href="#"><img alt="" [src]="i.imageUrl" style="width:100px;height:100px" class="img-circle"></a>
+      <a class="story-title" href="#"><img alt="" [src]="i.imageUrl" style="width:100px;height:100px"
+          class="img-circle"></a>
     </div>
     <div class="col-md-10 col-sm-9">
       <h3>{{i.title}}</h3>
       <div class="row">
         <div class="col-xs-9">
-          <h4><span class="label label-default">{{i.author}}</span></h4><h4>
-          <small style="font-family:courier,'new courier';" class="text-muted">{{i.genre}} <br> • <a href="" class="text-muted">Read More</a></small>
-          </h4></div>
+          <h4><span class="label label-default">{{i.author}}</span></h4>
+          <h4>
+            <small style="font-family:courier,'new courier';" class="text-muted">{{i.genre}} <br> • <a href=""
+                class="text-muted">Read More</a></small>
+          </h4>
+        </div>
         <div class="col-xs-3"></div>
       </div>
       <br><br>
-      <button class="btn btn-info"  (click)="updatebooks(books)">edit</button>
+      <button class="btn btn-info" (click)="updatebooks(i)">edit</button>
       <!-- <button class="btn btn-info" *ngIf="auth.loggedIn()" (click)="updatebooks(books)">edit</button> -->
-      <button class="btn btn-danger" (click)="deletebooks(books)">delete</button>
+      <button class="btn btn-danger" (click)="deletebooks(i)">delete</button>
       <!-- <button class="btn btn-danger" *ngIf="auth.loggedIn()" (click)="deletebooks(books)">delete</button> -->
     </div>
   </div>
- 
+
   <hr>
 
 
@@ -143,10 +147,10 @@
 
 
   <!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Launch static backdrop modal
   </button> -->
-  
+
   <!-- Modal -->
   <!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -176,15 +180,15 @@
                   <label for="exampleInputPassword1" class="form-label">image</label>
                   <input type="text" formControlName="imageUrl" class="form-control" id="">
                 </div> -->
-                <!-- <div class="mb-3">
+  <!-- <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">image</label>
                   <input type="file" formControlName="image" class="form-control" id="">
                 </div> -->
-                
-                <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
-              <!-- </form> -->
-        <!-- </div> -->
-        <!-- <div class="modal-footer">
+
+  <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+  <!-- </form> -->
+  <!-- </div> -->
+  <!-- <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary">Add books</button>
         </div>
