--- a/angular9/src/app/books/books.component.html
+++ b/angular9/src/app/books/books.component.html
@@ -1,43 +1,6 @@
-<!-- <div class="row" *ngFor='let i of books>   
-    <br>
-   
-   
-      
-          
-        </div>
-          <button type=""><a href="/books/delete/<%=books[i]._id%>">delete</a></button>
-          <button type=""><a href="/books/edit/<%=books[i]._id%>">update</a></button>
-        <div class="col-xs-3"></div>
-      </div>
-      <br><br>
-    </div>
-  </div>
- -->
 
 
 
-<!-- <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2 col-sm-3 text-center">
-            <a class="story-title" href="#"><img alt="" src="/assets/images/{{i.images}}" style="width:100px;height:100px" class="img-circle"></a>
-            <div class="col-md-10 col-sm-9"> -->
-<!-- <h3>{{books.title}}</h3> -->
-<!-- <div class="row">
-                    <div class="col-xs-9">
-                      <h4><span class="label label-default">{{i.author}}</span>
-                    </h4>
-                    <h4>
-                        <small style="font-family:courier,'new courier';" class="text-muted"><%=books[i].genre%>  • <a href="/books/<%=books[i]._id%>" class="text-muted">Read More</a></small>
-                        </h4>
-                        <h4>
-                            <small style="font-family:courier,'new courier';" class="text-muted"><%=books[i].genre%>  • <a href="/books/<%=books[i]._id%>" class="text-muted">Read More</a></small>
-                            </h4>
-                </div>
-                </div> 
-                </div> 
-        </div>
-    </div>
-  </div> -->
 
 
 
@@ -70,42 +33,39 @@
 
 
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div *ngFor='let i of books' class="row">
     <div class="col-md-2 col-sm-3 text-center mt-5">
       <img [src]="i.imageUrl" class="img-fluid" alt="..." width="180px">
       <h3>title{{i.title}}</h3>
       <div class="row">
         <div class="col-xs-9">
-          <h4><span class="label label-default">booksId{{i.booksId}}</span>
+          <h4><span class="label label-default">{{i.booksId}}</span>
           </h4>
         </div>
         <div class="row">
           <div class="col-xs-9">
-            <h4><span class="label label-default">author{{i.author}}</span>
+            <h4><span class="label label-default">{{i.author}}</span>
             </h4>
           </div>
           <div class="col-xs-9">
-            <h4><span class="label label-default">genre{{i.genre}}</span>
+            <h4><span class="label label-default">{{i.genre}}</span>
             </h4>
           </div>
-          <!-- <div class="col-xs-9">
-                    <h4><span class="label label-default">description{{i.author}}</span>
-                    </h4>
-                </div> -->
+          
           <div class="col-xs-9">
             <h4><span class="label label-default">{{i.imageUrl}}</span>
             </h4>
           </div>
           <button class="btn btn-info" (click)="updatebooks(i)">edit</button>
           <!-- <button class="btn btn-info" *ngIf="auth.loggedIn()" (click)="updatebooks(books)">edit</button> -->
-          <button class="btn btn-danger" (click)="deletebooks(i)">delete</button>
+          <!-- <button class="btn btn-danger" (click)="deletebooks(i)">delete</button> -->
           <!-- <button class="btn btn-danger" *ngIf="auth.loggedIn()" (click)="deletebooks(books)">delete</button> -->
-        </div>
+        <!-- </div>
       </div>
 
     </div>
-  </div>
+  </div> --> -->
 
 
 
